--- a/style.css
+++ b/style.css
@@ -125,3 +125,9 @@ footer {
 @media (max-width: 900px) {
   .content-layout { flex-direction: column; }
 }
+
+.btn.selected {
+  background-color: #444;
+  color: #fff;
+  box-shadow: inset 0 0 5px rgba(255,77,166,0.3);
+}
